# papki

./: .travis.yml  README.adoc  README.md  appveyor.yml  makefile  nuget.autopkg  nuget.autopkg.in  travis_bintray.json  travis_bintray.json.in  travis_bintray_android.json.in  travis_bintray_rasp.json.in  travis_bintray_ubu.json.in
.github/workflows/: ci.yml
android/: build.gradle  libpapki-$(version).pom.in  papki-$(version).pom.in  settings.gradle
android/app/: build.gradle
android/libpapki/: build.gradle  build.gradle.in
android/papki/: CMakeLists.txt  build.gradle
archlinux/: PKGBUILD
cmake/: CMakeLists.txt
cocoapods/: libpapki.podspec.in  papki.podspec.in
conan/: conanfile.py  conanfile.py.in
conan/test_package/: CMakeLists.txt  example.cpp
config/base/: base.mk
cygwin/: papki.cygport.in
debian/: changelog  control.in  libpapki-dev.install  libpapki.install.in  rules
doc/: doxygen.cfg  doxygen.cfg.in  makefile
homebrew/: libpapki.rb.in
ios/: Podfile
ios/tests/: main.cpp
ios/tests.xcodeproj/: project.pbxproj
msvs_solution/: msvs_solution.sln
msvs_solution/libpapki/: libpapki.vcxproj  libpapki.vcxproj.filters  packages.config
msvs_solution/test_FSFile/: packages.config  test_FSFile.vcxproj  test_FSFile.vcxproj.filters
msys2/: PKGBUILD.in
nbproject/: configurations.xml  project.xml
nuget/: build_nuget.ps1  nuget.autopkg.in
pkg-config/: papki.pc  papki.pc.in
src/: dummy.hpp  makefile
src/papki/: Exc.hpp  (+23 more)
src_deps/: makefile
tests/: test_target.mk
vcpkg/: usage  vcpkg.json.in
wiki/: Main.adoc
xcode/: Podfile
(+60 files in other folders)
